--- a/MultiValidator.Tests/FluentValidation.Extensions.Tests.csproj
+++ b/MultiValidator.Tests/FluentValidation.Extensions.Tests.csproj
@@ -7,9 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.2.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.1" />
+    <PackageReference Include="Moq" Version="4.18.2" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MultiValidator\FluentValidation.Extensions.csproj" />
   </ItemGroup>
 
 </Project>
