--- a/MultiValidator/FluentValidation.Extensions.csproj
+++ b/MultiValidator/FluentValidation.Extensions.csproj
@@ -3,7 +3,20 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Authors>Jeremy Shull</Authors>
+    <Company />
+    <Description>This lets you chain multiple Fluent Validations together and evaluate them as a group.</Description>
+    <PackageProjectUrl>https://github.com/JeremyShull/MultiValidator</PackageProjectUrl>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.2.2" />
