--- a/BufTools.FluentValidation.Aggregation/BufTools.FluentValidation.Aggregation.csproj
+++ b/BufTools.FluentValidation.Aggregation/BufTools.FluentValidation.Aggregation.csproj
@@ -5,64 +5,27 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Authors>Jeremy Shull</Authors>
     <Company />
-    <Description>This lets you easily chain multiple Fluent Validations together and evaluate them as a group. </Description>
-    <PackageProjectUrl>https://github.com/buffaloj/BufTools.Aggregation.FluentValidation</PackageProjectUrl>
-    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <Description>This lets you chain multiple Fluent Validations together and evaluate them as a group. </Description>
+    <PackageProjectUrl>https://github.com/buffaloj/BufTools.FluentValidationHelpers/tree/main/BufTools.FluentValidation.Aggregation</PackageProjectUrl>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <DocumentationFile />
     <PackageTags>fluentvalidation;validation</PackageTags>
-    <RepositoryUrl>https://github.com/buffaloj/BufTools.Aggregation.FluentValidation</RepositoryUrl>
+    <RepositoryUrl>https://github.com/buffaloj/BufTools.FluentValidationHelpers</RepositoryUrl>
     <PackageId>$(AssemblyName)</PackageId>
-    <Copyright>Copyright (c) Jeremy Shull, 2023</Copyright>
+    <Copyright>Copyright (c) Jeremy Shull, 2024</Copyright>
     <RepositoryType>git</RepositoryType>
-    <AssemblyVersion>1.0.4</AssemblyVersion>
-    <FileVersion>1.0.4</FileVersion>
+    <AssemblyVersion>2.0.0</AssemblyVersion>
+    <FileVersion>2.0.0</FileVersion>
     <NeutralLanguage>en</NeutralLanguage>
     <PackageIcon>icon.png</PackageIcon>
-    <Version>1.0.4</Version>
-    <Title>Fluent Validation Aggregation</Title>
+    <Version>2.0.0</Version>
+    <Title>FluentValidation Aggregation</Title>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <PackageReleaseNotes>Added package certificate signing.</PackageReleaseNotes>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netstandard2.0|AnyCPU'">
-    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|netstandard2.0|AnyCPU'">
-    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netstandard2.1|AnyCPU'">
-    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|netstandard2.1|AnyCPU'">
-    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net6.0|AnyCPU'">
-    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net6.0|AnyCPU'">
-    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net7.0|AnyCPU'">
-    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net7.0|AnyCPU'">
-    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
-  </PropertyGroup>
-
   
   <ItemGroup>
-    <None Include="..\README.md">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </None>
     <None Include="Resources\icon.png">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
@@ -90,7 +53,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    
+    <None Update="README.md">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None> 
   </ItemGroup>
     
 </Project>
