--- a/BufTools.FluentValidation.TestByExample/BufTools.FluentValidation.TestByExample.csproj
+++ b/BufTools.FluentValidation.TestByExample/BufTools.FluentValidation.TestByExample.csproj
@@ -1,19 +1,46 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Title>Test FluentValidators By Example</Title>
+    <Version>1.0</Version>
+    <Authors>Jeremy Shull</Authors>
+    <Description>Allows testing validators using example values found in the XML</Description>
+    <Copyright>Copyright (c) Jeremy Shull, 2024</Copyright>
+    <PackageProjectUrl>https://github.com/buffaloj/BufTools.FluentValidationHelpers/tree/main/BufTools.FluentValidation.TestByExample</PackageProjectUrl>
+    <PackageIcon>icon.png</PackageIcon>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <AssemblyVersion>1.0.0</AssemblyVersion>
+    <FileVersion>1.0.0</FileVersion>
+    <PackageTags>FluentValidation Test Testing</PackageTags>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <DocumentationFile />
+    <RepositoryType>git</RepositoryType>
+    <RepositoryUrl>https://github.com/buffaloj/BufTools.FluentValidationHelpers</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\BufTools.FluentValidation.Aggregation\Resources\icon.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="BufTools.ObjectCreation.FromXmlComments" Version="2.0.0" />
     <PackageReference Include="FluentValidation" Version="11.4.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\BufTools.Extensions\BufTools.Extensions.XmlComments\BufTools.Extensions.XmlComments.csproj" />
-    <ProjectReference Include="..\..\BufTools.ObjectCreation\BufTools.ObjectCreation.FromXmlComments\BufTools.ObjectCreation.FromXmlComments.csproj" />
+    <None Update="README.md">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
