Fixed readme in package

--- a/BufTools.FluentValidation.Aggregation/BufTools.FluentValidation.Aggregation.csproj
+++ b/BufTools.FluentValidation.Aggregation/BufTools.FluentValidation.Aggregation.csproj
@@ -22,6 +22,7 @@
     <Title>FluentValidation Aggregation</Title>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <PackageReleaseNotes>Added package certificate signing.</PackageReleaseNotes>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   
@@ -53,7 +54,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="README.md">
+    <None Include="README.md">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
