--- a/BufTools.FluentValidation.TestByExample/BufTools.FluentValidation.TestByExample.csproj
+++ b/BufTools.FluentValidation.TestByExample/BufTools.FluentValidation.TestByExample.csproj
@@ -36,7 +36,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="README.md">
+    <None Include="README.md">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
